--- a/src/index.scss
+++ b/src/index.scss
@@ -158,6 +158,7 @@ code {
 }
 .cell{
   border: 0.5px #D3D3D3 solid;
+  position: relative;
 }
 .passage-container-top.color-yellow  div:nth-child(5),
 .passage-container-top.color-yellow div:nth-child(6),
