--- a/src/index.scss
+++ b/src/index.scss
@@ -338,3 +338,13 @@ code {
     border-right: 33px solid $yellow;
   }
   }
+
+  .form-container{
+    width: 400px;
+    margin: auto;
+    background-color: honeydew;
+    display: flex;
+    padding: 20px;
+    border: 10px solid brown;
+    font-size: 20px;
+  }
