--- a/src/index.scss
+++ b/src/index.scss
@@ -18,6 +18,17 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+.fireworks-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 9999; /* Adjust z-index as needed */
+}
+
+
 .gray{
   color: darkslategray
 }
@@ -564,3 +575,5 @@ code {
     margin-top:4px;
   }
     }
+
+
