--- a/src/index.scss
+++ b/src/index.scss
@@ -10,13 +10,26 @@ $coinGreen:#006600;
 $coinYellow:#CC9900;
 
 body {
-  background-color: #0040ff;
+  background-color: #ADD8E6;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+footer {
+  position: fixed;
+  bottom: 10px;
+  width: 100%;
+  text-align: center;
+  background-color: #333;
+  color: #fff;
+  padding: 10px 0;
+}
+footer a {
+  color: #fff;
 }
 
 .fireworks-container {
@@ -28,7 +41,44 @@ body {
   z-index: 9999; /* Adjust z-index as needed */
 }
 
+h1 {
+  color: #8A2BE2; /* Using a unique color (blue-violet) */
+  font-size: 1em;
+  font-weight: bold;
+  text-align: center;
+  margin: auto;
+}
+.color-container{
+width: 80%;
+margin: auto;
+display: flex;
+flex-wrap: wrap;
+justify-content: space-evenly;
+align-items: center;
+}
+.choose-color{
+  width: 40%;
+  height: 100px;
+  margin-top: 20px;
+  margin-bottom: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.choose-color.red{
+background-color: $red;
+}
+.choose-color.green{
 
+  background-color: $green;
+}
+.choose-color.yellow{
+
+  background-color: $yellow;
+}
+.choose-color.blue{
+
+  background-color: $blue;
+}
 .gray{
   color: darkslategray
 }
@@ -315,6 +365,7 @@ code {
 }
 
   .form-container{
+    margin-top:20px!important;
     width: 400px;
     margin: auto;
     background-color: honeydew;
@@ -357,6 +408,7 @@ code {
   .board-and-dice{
     display: flex;
     flex-wrap: wrap;
+    margin-top:20px
   }
   .dice-button-container{
     margin-left: 10px;
@@ -470,7 +522,7 @@ code {
       font-size: 15px!important;
     }
     .form-container {
-      width: 48%;
+      width: 73%;
       background-color: honeydew;
       display: flex;
       padding: 20px;
@@ -478,8 +530,12 @@ code {
       font-size: 20px;
       flex-direction: column;
       display: flex;
-      margin-left: 28px;
+    }
+    .color-container {
+      width: 97%;
+
   }
+  
     .cell-cize{
       width: 7px!important;
        height: 7px!important;
