--- a/src/index.scss
+++ b/src/index.scss
@@ -558,8 +558,8 @@ code {
     }
     .dice-button-container{
       justify-content: end;
-      margin-left: 40%;
-      margin-top: 10px;
+      margin: auto;
+      margin-top: 10px!important;
     }
     .container-square {
       position: relative;
